<resources>
    <string name="app_name">ESP RainMaker</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_provision_landing">Connect to device</string>
    <string name="no_internet_note">To make sure you are really connected to the device, please make sure you accept the system dialog informing you that network has no internet access.</string>
    <string name="connect_to_device_action">Connect</string>
    <string name="connected_to_device_action">Provision Network</string>
    <string name="title_activity_provision_instructions">Provision Instructions</string>
    <string name="setup_instructions">To complete setup of your device, please provide your Home Network\'s credentials.</string>
    <string name="ssid_hint_text">Network Name</string>
    <string name="password_hint_text">Password</string>
    <string name="provision">Provision</string>
    <string name="dialog_msg_for_gps">Location services are disabled. Please enable them to continue</string>

    <string name="success_text">Device has been successfully provisioned!</string>
    <string name="add_device_success_text">Device has been successfully added!</string>
    <string name="wifi_disconnected_text">Please check the device indicators for provisioning status.</string>
    <string name="done">Done</string>

    <string name="enable_bluetooth_instructions">To provision your new device, please make sure that your Phone\'s Bluetooth is turned on and within range of your new device.</string>
    <string name="enabled_bluetooth_instructions">To provision the device, please enter your Network credentials on the next page.</string>
    <string name="enable_bluetooth_action">Enable</string>
    <string name="enabled_bluetooth_action">Provision Network</string>

    <!--Strings used for Buttons-->
    <string name="btn_start_provisioning">Start Provisioning</string>
    <string name="btn_scan_again">Scan Again</string>
    <string name="btn_sign_in_amazon">Sign in with Amazon</string>
    <string name="btn_do_it_later">Do It Later</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_next">Next</string>
    <string name="btn_change_prefix">Change</string>
    <string name="btn_save">Save</string>
    <string name="btn_update">Update</string>

    <!-- Strings used for Progress -->
    <string name="progress_scanning">Scanning Devices...</string>
    <string name="progress_get_status">Getting Status</string>
    <string name="progress_loading">Loading...</string>

    <!--Error Messages-->
    <string name="error_ble_not_supported">Sorry! BLE is not supported.</string>
    <string name="error_bluetooth_not_supported">Sorry! Bluetooth is not supported.</string>
    <string name="error_device_not_supported">Communication failed. Device may not be supported.</string>
    <string name="error_pop_incorrect">Error establishing session.\n Check if Proof of Possession(POP) is correct!</string>

    <!--Screen titles-->
    <string name="title_activity_provision_success">ProvisionSuccessActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_esp_device">Device</string>

    <string name="prefix">Prefix :</string>
    <string name="hint_prefix">Enter Prefix</string>
    <string name="hint_key">Enter PIN</string>
    <string name="devices_title">Devices</string>
    <string name="enter_device_key">Enter Your Proof Of Possession PIN</string>

    <string name="join_other_network">Join Other Network</string>
    <string name="networks">Networks</string>
    <string name="text_on">ON</string>
    <string name="text_off">OFF</string>

    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="Menu">Menu</string>
    <string name="app_main_desc">A sample app to showcase Cognito Identity and the SDK for Android.</string>
    <string name="powered_by_esp">Powered by ESPRESSIF</string>
    <string name="no_devices">No devices added</string>
    <string name="add_device_txt">You can provision a device by scanning the QR code or you can do it manually my tapping on + icon on right-top of this screen.</string>
    <string name="signup_confirm_msg">Enter verification code.</string>
    <string name="node_offline">Node Offline</string>
    <string name="status_offline">Offline</string>
    <string name="offline_at">Offline at</string>

    <!--Tab titles-->
    <string name="tab_login">SIGN IN</string>
    <string name="tab_sign_up">SignUp</string>

    <!--Hint texts-->
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_old_password">Old Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="hint_confirm_new_password">Confirm New Password</string>
    <string name="hint_verification_code">Verification code</string>
    <string name="hint_pop">Proof of Possession</string>
    <string name="hint_ssid">Network Name</string>
    <string name="hint_value">Enter Value</string>

    <!--Button text-->
    <string name="btn_register">Register</string>
    <string name="btn_registering">Registering&#8230;</string>
    <string name="btn_login">Sign in</string>
    <string name="btn_signing_in">Signing in&#8230;</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_confirming">Confirming&#8230;</string>
    <string name="btn_set_password">Set Password</string>
    <string name="btn_setting_password">Setting password&#8230;</string>
    <string name="btn_connect">Connect</string>
    <string name="btn_connecting">Connecting&#8230;</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_resetting_password">Resetting Password&#8230;</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_removing">Removing&#8230;</string>
    <string name="btn_github">Sign in using GitHub</string>
    <string name="btn_google">Sign in using Google</string>
    <string name="btn_ok">OK</string>
    <string name="btn_back">Back</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_join">Provision</string>
    <string name="btn_yes">YES</string>
    <string name="btn_no">NO</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_no_qr_code">I don\'t have a QR code</string>
    <string name="btn_add_device">Add Device</string>

    <!--Screen titles-->
    <string name="title_activity_devices">Devices</string>
    <string name="title_activity_sign_up_confirm">Confirm Account</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_connect_device">Connect to Device</string>
    <string name="title_activity_add_device">Add Device</string>
    <string name="title_activity_pop">Proof of Possession</string>
    <string name="title_activity_provision">Provision</string>
    <string name="title_activity_provisioning">Provisioning</string>
    <string name="title_activity_wifi_scan_list">Select Wi-Fi Network</string>
    <string name="title_activity_node_details">Node Details</string>
    <string name="title_activity_user_profile">User Profile</string>

    <!--Error Messages-->
    <string name="error_email_empty">Email cannot be empty</string>
    <string name="error_invalid_email">Please enter valid email</string>
    <string name="error_password_empty">Password cannot be empty</string>
    <string name="error_confirm_password_empty">Confirm Password cannot be empty</string>
    <string name="error_confirmation_code_empty">Confirmation code cannot be empty</string>
    <string name="error_verification_code_empty">Verification code cannot be empty</string>
    <string name="error_ssid_empty">Network name cannot be empty</string>
    <string name="error_password_not_matched">Passwords not matched</string>
    <string name="error_agree_terms_n_condition">Please agree to privacy policy and terms of Use.</string>
    <string name="error_provisioning">Reset your board to factory defaults and retry</string>
    <string name="error_authentication_failed">Wi-Fi Authentication failed.</string>
    <string name="error_network_not_found">Network not found.</string>
    <string name="error_unknown">Unknown Error.</string>
    <string name="error_device_name_empty">Device name canot be empty</string>

    <!--Link texts-->
    <string name="link_documentation"><a href="https://rainmaker.espressif.com/">Documentation</a></string>
    <string name="link_privacy"><a href="https://rainmaker.espressif.com/docs/privacy-policy.html">Privacy</a></string>
    <string name="link_terms_of_use"><a href="https://rainmaker.espressif.com/docs/terms-of-use.html">Terms of Use</a></string>

    <!--Dialog texts-->
    <string name="dialog_title_login_failed">Sign-in failed</string>
    <string name="dialog_title_sign_up_failed">Sign up failed</string>
    <string name="dialog_title_sign_up_success">Sign up successful!</string>
    <string name="dialog_title_conf_code_sent">Confirmation code sent</string>
    <string name="dialog_title_conf_code_req_fail">Confirmation code request has failed</string>
    <string name="dialog_title_password_changed">Password successfully changed!</string>
    <string name="dialog_title_forgot_password_failed">Forgot password failed</string>

    <!--Node Details-->
    <string name="node_id">Node Id</string>
    <string name="node_name">Name</string>
    <string name="node_type">Type</string>
    <string name="node_fw_version">Firmware Version</string>
    <string name="node_config_version">Config Version</string>

    <!--Other Strings-->
    <string name="read_terms_condition">I have read and agree to the Privacy Policy and Terms of Use.</string>
    <string name="login_with">Login with</string>
    <string name="use_email_id">or use your email id</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="resend_code">Resend Code</string>
    <string name="connect_your_device">Connect to your device</string>
    <string name="password_instruction">Password should contain at least one capital letter, one special character and a number.</string>
    <string name="forgot_password_instruction">Please enter your registered email id to reset your password.</string>
    <string name="reset_password_instruction">Set your new password with the verification code that was sent to you.</string>
    <string name="connect_device_instruction">To provision your device, make sure it is turned ON. Connect your mobile phone to the Wi-Fi network with a name like PROV_XXXXXX</string>
    <string name="pop_instruction">Enter your proof of possession PIN for</string>
    <string name="documentation">Documentation</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="looking_for_qr_code">Looking for QR Code</string>
    <string name="position_camera_for_qr_code">Please position the camera to point at the QR Code.</string>

    <string name="prov_step_1">Sending Wi-Fi credentials</string>
    <string name="prov_step_2">Confirming Wi-Fi connection</string>
    <string name="prov_step_3">Configuring User-Node association</string>
    <string name="prov_step_4">Confirming User-Node association</string>

</resources>
